--- a/conf/my.conf
+++ b/conf/my.conf
@@ -40,11 +40,13 @@ http {
     #gzip  on;
     upstream s {
         nacos_subscribe_service service_name=springmvc-nacos-demo; # data_id 要和 spring.application.name一致
+        keepalive 300;
     }
     nacos_config_var $n_var data_id=ccccdddddd group=DEFAULT_GROUP md5_var=$dd default=123456;
     server {
         listen 9999 default_server;
-
+        proxy_set_header Connection "";
+        proxy_http_version 1.1;
         location ^~ / {
             add_header X-Var-Nacos "$n_var" always;
             proxy_pass http://s;
