update config module directory

--- a/modules/auxiliary/config
+++ b/modules/auxiliary/config
@@ -1,8 +1,8 @@
 ngx_module_type=AUXILIARY
 ngx_module_name=ngx_auxiliary_module
-ngx_module_incs=modules/auxiliary
-ngx_module_deps=modules/auxiliary/ngx_auxiliary_module.h
-ngx_module_srcs=modules/auxiliary/ngx_auxiliary_module.c
+ngx_module_incs=$ngx_addon_dir
+ngx_module_deps=$ngx_addon_dir/ngx_auxiliary_module.h
+ngx_module_srcs=$ngx_addon_dir/ngx_auxiliary_module.c
 ngx_module_libs=
 ngx_module_order=
 ngx_module_link=ADDON
