--- a/conf/my.conf
+++ b/conf/my.conf
@@ -21,9 +21,9 @@ nacos {
     #udp_bind 0.0.0.0:19999; # 绑定udp 地址
 #     username "nacos";
 #    password "nacos";
-    error_log cmake-build-debug/logs/nacos.log info;
+    error_log objs/logs/nacos.log info;
     default_group DEFAULT_GROUP; # 默认的nacos group name
-    cache_dir cmake-build-debug/nacos/;
+    cache_dir objs/nacos/;
 }
 http {
     include       mime.types;
@@ -39,7 +39,8 @@ http {
 
     #gzip  on;
     upstream s {
-        nacos_subscribe_service service_name=springmvc-nacos-demo; # data_id 要和 spring.application.name一致
+        nacos_subscribe_service service_name=springmvc-nacos-demo weight=100 max_fails=1 fail_timeout=10s; # service_name 要和 spring.application.name一致
+        nacos_use_cluster DEFAULT;
         keepalive 300;
     }
     nacos_config_var $n_var data_id=ccccdddddd group=DEFAULT_GROUP md5_var=$dd default=123456;
