--- a/conf/my.conf
+++ b/conf/my.conf
@@ -14,13 +14,13 @@ events {
 }
 
 nacos {
-    server_list localhost:8848; # nacos 服务器列表，空格隔开
-    grpc_server_list localhost:9848; # nacos grpc服务器列表，空格隔开
+    server_list 127.0.0.1:8848; # nacos 服务器列表，空格隔开
+    grpc_server_list 127.0.0.1:9848; # nacos grpc服务器列表，空格隔开
     #udp_port 19999; #udp 端口号
     #udp_ip 127.0.0.1; #udp ip 地址。
     #udp_bind 0.0.0.0:19999; # 绑定udp 地址
-#     username "nacos";
-#    password "nacos";
+    username "nacos";
+    password "nacos";
     error_log objs/logs/nacos.log info;
     default_group DEFAULT_GROUP; # 默认的nacos group name
     cache_dir objs/nacos/;
@@ -43,23 +43,17 @@ http {
         nacos_use_cluster DEFAULT;
         keepalive 300;
     }
-    nacos_config_var $n_var data_id=ccccdddddd group=DEFAULT_GROUP md5_var=$dd default=123456;
+    nacos_config_var $n_var data_id=tt.server.route.json group=stg1 md5_var=$dd default=123456;
     server {
         listen 9999 default_server;
         proxy_set_header Connection "";
         proxy_http_version 1.1;
         location ^~ / {
-            add_header X-Var-Nacos "$n_var" always;
             proxy_pass http://s;
         }
 
-        nacos_config_var $n_bb data_id=aaabbbbccc;
-
-
         location ^~ /echo {
-            nacos_config_var $n_var data_id=ccdd;
-            add_header X-Var-Nacos "$n_var";
-            return 200 "hear ....n_var: $n_var ... n_bb: $n_bb ....dd: $dd";
+            return 200 "hear ....n_var: $n_var ... ....dd: $dd";
         }
     }
 }
