subscribe service and config in different grpc connection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -178,6 +178,9 @@ if (NACOS)
             modules/nacos/ngx_http_nacos_config_module.c
             modules/nacos/ngx_nacos_udp.c
             modules/nacos/ngx_nacos_grpc.c
+            modules/nacos/ngx_nacos_naming.c
+            modules/nacos/ngx_nacos_config.c
+            modules/nacos/ngx_nacos_payload.c
             modules/nacos/nacos_grpc_service.pb.c
             modules/nacos/ngx_nacos_http_v2.c
             modules/nacos/ngx_nacos_http_v2_huff_decode.c
