--- a/conf/my.conf
+++ b/conf/my.conf
@@ -4,7 +4,7 @@ daemon off;
 
 #error_log  logs/error.log;
 #error_log   logs/error.log  notice;
-error_log  cmake-build-debug/logs/error.log  notice;
+error_log   logs/error.log  notice;
 
 #pid        logs/nginx.pid;
 
@@ -19,11 +19,11 @@ nacos {
     #udp_port 19999; #udp 端口号
     #udp_ip 127.0.0.1; #udp ip 地址。
     #udp_bind 0.0.0.0:19999; # 绑定udp 地址
-    username "nacos";
-    password "nacos";
-    error_log objs/logs/nacos.log info;
+#    username "nacos";
+#   password "nacos";
+    error_log logs/nacos.log info;
     default_group DEFAULT_GROUP; # 默认的nacos group name
-    cache_dir objs/nacos/;
+    cache_dir nacos/;
 }
 http {
     include       mime.types;
@@ -39,6 +39,7 @@ http {
 
     #gzip  on;
     upstream s {
+        server 127.0.0.1:80;
         nacos_subscribe_service service_name=springmvc-nacos-demo weight=100 max_fails=1 fail_timeout=10s; # service_name 要和 spring.application.name一致
         nacos_use_cluster DEFAULT;
         keepalive 300;
