--- a/modules/nacos/config
+++ b/modules/nacos/config
@@ -1,4 +1,17 @@
-ngx_module_type=AUXILIARY
+ngx_module_type=CORE
+ngx_module_name=
+ngx_module_incs=$ngx_addon_dir
+ngx_module_deps=
+ngx_module_srcs=
+ngx_module_libs=
+ngx_module_order=
+ngx_module_link=ADDON
+
+. auto/module
+
+# =============== event =============================
+
+ngx_module_type=EVENT
 ngx_module_name=ngx_nacos_module
 ngx_module_incs=$ngx_addon_dir
 ngx_module_deps=$ngx_addon_dir/ngx_nacos_aux.h
@@ -19,6 +32,9 @@ ngx_module_srcs="$ngx_addon_dir/yaij/yajl.c  \
     $ngx_addon_dir/ngx_nacos_http_parse.c  \
     $ngx_addon_dir/ngx_nacos_data.c  \
     $ngx_addon_dir/ngx_nacos_udp.c \
+    $ngx_addon_dir/ngx_nacos_config.c \
+    $ngx_addon_dir/ngx_nacos_naming.c \
+    $ngx_addon_dir/ngx_nacos_payload.c \
     $ngx_addon_dir/ngx_nacos_grpc.c \
     $ngx_addon_dir/backup.pb.c \
     $ngx_addon_dir/ngx_nacos_http_v2.c \
