--- a/conf/my.conf
+++ b/conf/my.conf
@@ -1,16 +1,16 @@
 #user  nobody;
 master_process off;
 daemon off;
+worker_processes 6;
 
 #error_log  logs/error.log;
 #error_log   logs/error.log  notice;
 error_log   logs/error.log  notice;
-
 #pid        logs/nginx.pid;
 
 
 events {
-    worker_connections  1024;
+    worker_connections  10240;
 }
 
 nacos {
@@ -24,12 +24,24 @@ nacos {
     error_log logs/nacos.log info;
     default_group DEFAULT_GROUP; # 默认的nacos group name
     cache_dir nacos/;
+
+    register nginx-server {
+        port 9999;
+        #group DEFAULT_GROUP;
+        #cluster daily-default;
+        #weight 80;
+        #healthy on;
+        metadata from nginx;
+    }
 }
 http {
     include       mime.types;
     default_type  application/octet-stream;
+    log_format main "$remote_addr - $remote_user [$time_local] "
+                                    "$request $status $body_bytes_sent "
+                                    "$http_referer $http_user_agent ====$nacos_real_cluster $upstream_addr";
 
-    #access_log  logs/access.log  main;
+    access_log  logs/access.log  main;
 
     sendfile        on;
     #tcp_nopush     on;
@@ -41,7 +53,7 @@ http {
     upstream s {
         server 127.0.0.1:80;
         nacos_subscribe_service service_name=springmvc-nacos-demo weight=100 max_fails=1 fail_timeout=10s; # service_name 要和 spring.application.name一致
-        nacos_use_cluster DEFAULT;
+        nacos_use_cluster $cluster1 $cluster2;
         keepalive 300;
     }
     nacos_config_var $n_var data_id=tt.server.route.json group=stg1 md5_var=$dd default=123456;
