--- a/conf/my.conf
+++ b/conf/my.conf
@@ -1,7 +1,7 @@
 #user  nobody;
-master_process off;
+master_process on;
 daemon off;
-worker_processes 6;
+worker_processes 1;
 
 #error_log  logs/error.log;
 #error_log   logs/error.log  notice;
@@ -57,11 +57,15 @@ http {
         keepalive 300;
     }
     nacos_config_var $n_var data_id=tt.server.route.json group=stg1 md5_var=$dd default=123456;
+
+    access_by_lua_file ../conf/access.lua;
+    init_nacos_by_lua_file ../conf/nacos.lua;
     server {
         listen 9999 default_server;
         proxy_set_header Connection "";
         proxy_http_version 1.1;
         location ^~ / {
+            add_header X-Nacos-Real-Cluster $nacos_real_cluster always;
             proxy_pass http://s;
         }
 
