fix event null log on debug mod

--- a/conf/my.conf
+++ b/conf/my.conf
@@ -53,7 +53,7 @@ http {
     upstream s {
         server 127.0.0.1:80;
         nacos_subscribe_service service_name=springmvc-nacos-demo weight=100 max_fails=1 fail_timeout=10s; # service_name 要和 spring.application.name一致
-        nacos_use_cluster $cluster1 $cluster2;
+        nacos_use_cluster $arg_cluster1 $arg_cluster2;
         keepalive 300;
     }
     nacos_config_var $n_var data_id=tt.server.route.json group=stg1 md5_var=$dd default=123456;
