fix port and weight on protobuf encoding instances #23

--- a/conf/my.conf
+++ b/conf/my.conf
@@ -1,7 +1,7 @@
 #user  nobody;
 master_process off;
 daemon off;
-worker_processes 1;
+worker_processes 4;
 
 #error_log  logs/error.log;
 #error_log   logs/error.log  notice;
@@ -25,8 +25,8 @@ nacos {
     default_group DEFAULT_GROUP; # 默认的nacos group name
     cache_dir nacos/;
 
-    register nginx-server {
-        port 9999;
+    register springmvc-nacos-demo {
+        port 9998;
         #group DEFAULT_GROUP;
         #cluster daily-default;
         #weight 80;
@@ -52,13 +52,11 @@ http {
     #gzip  on;
     upstream s {
         server 127.0.0.1:80;
-        nacos_subscribe_service service_name=springmvc-nacos-demo weight=100 max_fails=1 fail_timeout=10s; # service_name 要和 spring.application.name一致
-        nacos_use_cluster $arg_cluster1 $arg_cluster2;
-        keepalive 300;
+        nacos_subscribe_service service_name=springmvc-nacos-demo; # service_name 要和 spring.application.name一致
     }
     nacos_config_var $n_var data_id=tt.server.route.json group=stg1 md5_var=$dd default=123456;
 
-    access_by_lua_file ../conf/access.lua;
+    #access_by_lua_file ../conf/access.lua;
     init_nacos_by_lua_file ../conf/nacos.lua;
     server {
         listen 9999 default_server;
@@ -73,4 +71,10 @@ http {
             return 200 "hear ....n_var: $n_var ... ....dd: $dd";
         }
     }
+     server {
+            listen 9998 default_server;
+            location ^~ / {
+                 return 200 "hear ....n_var: $n_var ... ....dd: $dd";
+            }
+        }
 }
